// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Renders disabled correctly 1`] = `
<label
  class="checkbox-label"
>
  <span>
    My child
  </span>
  <span
    class="checkbox-custom checkbox-disabled rectangular"
  />
</label>
`;

exports[`Renders enabled correctly 1`] = `
<label
  class="checkbox-label"
>
  <span
    class="checkbox-custom rectangular"
  />
</label>
`;
